Heading spacing fixes

--- a/shavuot/style.css
+++ b/shavuot/style.css
@@ -1038,3 +1038,7 @@ box-shadow: 0px 0px 46px 0px rgba(0,0,0,0.75);
   padding-top: 0;
   padding: 0;
 }
+
+.shavuot-minisite .form-section .form-input-wide:first-child .form-header-group {
+	margin-top: 0;
+}
